--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body{
 	text-align: center;
 	font-weight: bold;
 	font-size: 1.8rem;
-	padding: 15px 0
+	padding: 15px 10px
 	}
 .message-header+.message-body{
 	border-radius:0 0 20px 20px;
@@ -91,9 +91,8 @@ body{
 	font-size: 2rem;
 	height: inherit;
 }
-.input.is-danger{
+.input.short{
 	padding: 2px 10px 4px 45px;
-	background-color: transparent;
 	width: 140px;
 }
 
@@ -141,6 +140,7 @@ body{
 }
 .input{
 	display: inline-block;
+	background-color: transparent;
 }
 
 .control:not(:last-child){
@@ -173,5 +173,4 @@ body{
 .button.arrow-but.arrow-right::before{
 	left: 0;
 	border-radius:0 20px 20px 0;
-	
 }
