--- a/style.css
+++ b/style.css
@@ -39,17 +39,63 @@ body{
 	background-size: contain
 }
 .footer{
-	max-width: 50%;
-	align-self: flex-end;
+	width: 100%;
 	background-color: transparent;
 }
+.container{
+	width: 50%;
+	position: relative
+}
 .message{
-	display: none;
+	opacity: 0;
+	position: absolute;
 	border-radius:20px; 
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
 }
-.message.active{
-	display: block;
+@keyframes bounceInLeft {
+  from, 60%, 75%, 90%, to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  }
+
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(-3000px, 0, 0);
+    transform: translate3d(-3000px, 0, 0);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: translate3d(25px, 0, 0);
+    transform: translate3d(25px, 0, 0);
+  }
+
+  75% {
+    -webkit-transform: translate3d(-10px, 0, 0);
+    transform: translate3d(-10px, 0, 0);
+  }
+
+  90% {
+    -webkit-transform: translate3d(5px, 0, 0);
+    transform: translate3d(5px, 0, 0);
+  }
+
+  to {
+    -webkit-transform: none;
+    transform: none;
+  }
 }
+
+.active {
+	z-index: 10;
+	opacity: 1;
+  -webkit-animation-name: bounceInLeft;
+  animation-name: bounceInLeft;
+}
+
 .is-danger{
 	background-color: #ed217c;
 }
@@ -90,6 +136,7 @@ body{
 	border-radius: 20px;
 	font-size: 2rem;
 	height: inherit;
+	line-height: 2.5rem;
 }
 .input.short{
 	padding: 2px 10px 4px 45px;
