--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
 	height: 100vh;
 	width: 100%;
 	background: url(images/full.jpg);
+	background-size: cover;
 }
 .back{
 	position: absolute;
@@ -55,6 +56,7 @@ body{
 .footer{
 	width: 100%;
 	background-color: transparent;
+	padding: 10px 20px 350px;
 }
 .container{
 	width: 50%;
@@ -68,6 +70,7 @@ body{
   animation-duration: 1s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+  margin-top: -300px;
 }
 @keyframes bounceInLeft {
   from, 60%, 75%, 90%, to {
@@ -117,6 +120,7 @@ body{
 	opacity: 1;
   -webkit-animation-name: bounceInLeft;
   animation-name: bounceInLeft;
+  margin-top: 0
 }
 
 .is-danger{
@@ -205,6 +209,9 @@ body{
 	text-align: center;
 }
 
+form .button{
+	margin-top: 10px
+}
 .form-elems{
 	justify-content: space-around;
 }
@@ -245,14 +252,23 @@ body{
 	border-radius:0 20px 20px 0;
 }
 
-@media only screen and (max-width:1200px) {
-.back.back-right{
-	display: none;
-}
-.back.back-left{
-		background: url(images/left-bg.jpg);
-		background-size: cover;
-		width: 100%;
-		height: 100vh;
+@media all and (max-width:460px) {
+	.message.is-danger.slide-1 {
+		width: 50%;
+		margin:0
 	}
+}
+@media all and  (max-width:1200px) {
+	.back.back-right{
+		display: none;
+	}
+	.back.back-left{
+			background: url(images/left-bg.jpg);
+			background-size: cover;
+			width: 100%;
+			height: 100vh;
+		}
+	.slide-1 .button.is-dark{
+		margin-bottom: 10px;
+	}	
 }
