--- a/style.css
+++ b/style.css
@@ -41,11 +41,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 	
 }
 .back.back-left{
-	background: url(images/left-bg.jpg);
+	background-image: url(images/left-bg.jpg);
 	left: 0;
 }
 .back.back-right{
-	background: url(images/right-bg.jpg);
+	background-image: url(images/right-bg.jpg);
 	right: 0;
 }
 .wrapper{
@@ -78,7 +78,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 }
 .container{
 	width: 50%;
-	position: relative
+	position: relative;
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+}
+.center{
+	position: relative;
+	width: 80%;
+	max-width: 700px;
 }
 .message{
 	max-width: 700px;
@@ -297,7 +305,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 		margin: -50px 0 0 -200px;
 	}
 	.back.back-left{
-			background: url(images/left-bg.jpg);
+/* 			background: url(images/left-bg.jpg); */
 			background-size: cover;
 			width: 100%;
 			height: 100vh;
