--- a/style.css
+++ b/style.css
@@ -316,7 +316,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 }
 @media (max-width:320px) {
 	.container{
-		font-size: 1.2rem
+		font-size: 1.2rem;
 		width: 100%;
 	}
 	.message.is-danger.slide-1 span {
