--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body{
 	position: relative;
-	font-size: 2rem;
+	font-size: 1.8rem;
 }
 .back-full{
 	position: absolute;
@@ -36,9 +36,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 }
 .invis{
 	display: inline-block;
-	width: 200px;
+	width: 45%;
 	height: 50px;
-	margin-right: 50px;
 	
 }
 .back.back-left{
@@ -192,7 +191,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 	padding-right: 35px
 }
 .button , .input{
-	padding: 2px 50px 4px;
+	padding: 2px 25px 4px;
 	border-radius: 20px;
 	font-size: 2rem;
 	height: inherit;
@@ -209,7 +208,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 
 .bulb{
 	opacity: .5;
-	margin-right: 20px;
+	margin-right: 15px;
 	display: inline-block;
 	height: 30px;
 	width: 30px;
@@ -217,13 +216,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 	border-radius: 50%;
 	vertical-align: middle;
 }
-.bulb:first-child{margin-left: 40px}
+.bulb:first-child{margin-left: 30px}
 .bulb.current{opacity: 1}
 
-.button.continue{
+.button.is-danger.continue{
 	padding-left: 20px;
 	overflow: hidden;
 	position: relative;
+	background-color: #ff3860;
+	padding-right: 40px;
 }
 .button.continue .fa.fa-angle-double-right{
 	position: absolute;
@@ -291,7 +292,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 	border-radius:0 20px 20px 0;
 }
 
-
+.slide-10 .select select{
+	background-color: transparent;
+	border: none;
+	font-size: 2rem;
+	color: #7d7d7d;
+}
 
 
 @media(max-width:1200px) {
@@ -326,11 +332,18 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 }
 
 @media (max-width:460px) {
+body, .message-header, .button, .slide-10 .select select, .button, .input {
+		font-size: 1rem;
+	}
+	
+	.back-full{
+		background: url(images/mobback.jpg) no-repeat;
+		background-size: contain;
+	}
 	.logo {
 		width: 90%;
-
 	}
-	.invis{width: 150px;}
+	.invis{width: 45%;}
 	.container{
 		width: 90%;
 		font-size: 1.2rem
@@ -342,8 +355,25 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 	.message.is-danger .message-body{
 		margin-bottom: 0
 	}
-}
+	.bulb{
+		height: 10px;
+		width: 10px;
+		margin-right: 5px;
+	}
+	.button.continue .fa.fa-angle-double-right{
+		padding-top: 10px;
+	}
+	.form-elems{
+		flex-wrap: wrap;
 
+	}
+	.select{
+		padding: 7px;
+	}
+	.button, .input{
+		margin: 7px 0;
+	}
+}
 p.error {
  text-align: center !important;
  font-size: 0.65em;
@@ -351,12 +381,7 @@ p.error {
  padding: 5px 0;
 }
 
-.slide-10 .select select{
-	background-color: transparent;
-	border: none;
-	font-size: 2rem;
-	color: #7d7d7d;
-}
+
 .slide-10 .input.short{
 	padding-left: 30px;
 }
