--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 	height: 100vh;
 	width: 100%;
 	background: url(images/full.jpg) no-repeat;
-	background-size: cover;
+	background-size:contain;
 	background-position: 50%;
 }
 .inner-back{
