--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ body{
 	background-size:contain;
 	background-position: 50%;
 }
+.back-full.fullback{
+	background: url(images/fullback.jpg) no-repeat;
+	background-size:contain;
+	background-position: 50%;
+}
+.back-full.fullback .inner-back{display: none}
 .inner-back{
 	width: 100%;
 	height: 100%;
@@ -27,7 +33,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 	width: 50%;
 	top: 0;
 	min-height: 100vh;
-	max-width: 1000px
+	max-width: 1000px;
 	z-index: 1;
 	display: none;
 	background-size: contain;
@@ -40,7 +46,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 	height: 50px;
 	
 }
-.back.back-left{
+/* .back.back-left{
 	background-image: url(images/left-bg.jpg);
 	background-position-x:right; 
 	right: 50%
@@ -49,7 +55,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 	background-image: url(images/right-bg.jpg);
 	background-position-x: left;
 	left: 50%;
-}
+} */
 .wrapper{
 	position: relative;
 	z-index: 10;
@@ -178,6 +184,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 	text-align: center;
 	border: none;
 	padding-bottom: 50px;
+	font-weight: 400;
 }
 .message.is-danger .message-body p{
 	padding-bottom: 25px;
@@ -298,9 +305,24 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 	font-size: 2rem;
 	color: #7d7d7d;
 }
+.form-elems{
+	width: 100%
+}
+.slide-10 .input.short{
+	padding-left: 30px;
+}
 
+.mobile-navi{
+		display: none;
+	}
+p.error {
+	text-align: center !important;
+	font-size: 0.65em;
+	color: #FF204C;
+	padding: 5px 0;
+	}
 
-@media(max-width:1200px) {
+@media screen and(max-width:1200px) {
 	body, .message-header,.button{
 		font-size: 1.5rem;
 	}
@@ -320,33 +342,69 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 		margin-bottom: 10px;
 	}	
 }
-@media (max-width:320px) {
+@media screen and (max-width:320px) {
+	.logo {
+		width: 90%;
+		height: 50px;
+	}
 	.container{
 		font-size: 1.2rem;
 		width: 100%;
+		height: 100%;
 	}
 	.message.is-danger.slide-1 span {
-	font-size: 1.2rem;
-	font-weight: bold
-}
+		font-size: 1.2rem;
+		font-weight: bold
+	}
 }
 
-@media (max-width:460px) {
-body, .message-header, .button, .slide-10 .select select, .button, .input {
+@media screen and (max-width:460px) {
+	body, .message-header, .button, .slide-10 .select select, .button, .input {
 		font-size: 1rem;
 	}
-	
+	.footer{
+		padding: 0;
+		align-self: flex-end;
+		min-height: 240px;
+		height: auto;
+		background-color:#7d7d7d; 
+	}
+	.message.is-danger{
+		max-width: 100%;
+		width: 100%;
+		min-height: 240px;
+	}
 	.back-full{
+		background: url(images/right-bg.jpg) no-repeat;
+		background-size: contain;
+	}
+	.back-full.back-2{
+		background: url(images/left-bg.jpg) no-repeat;
+		background-size: contain;
+	}
+	.back-full.back-2 .inner-back{
+		display: none;
+	}
+	.back-full.back-2.back-3{
 		background: url(images/mobback.jpg) no-repeat;
 		background-size: contain;
 	}
+	.message{
+		border-radius: 0;
+	}
 	.logo {
 		width: 90%;
+		height: 80px;
 	}
 	.invis{width: 45%;}
 	.container{
-		width: 90%;
-		font-size: 1.2rem
+		width: 100%;
+		font-size: 19px;
+		height: 100%;
+		background-color: #e1e1e1
+	}
+	.center{
+		width: 100%
 	}
 	.message.is-danger.slide-1 {
 		width: 100%;
@@ -355,10 +413,81 @@ body, .message-header, .button, .slide-10 .select select, .button, .input {
 	.message.is-danger .message-body{
 		margin-bottom: 0
 	}
+	.message.is-danger .message-body p{
+		font-size: 16px;
+		line-height: 15px;
+		padding-bottom: 10px
+	}
+	.message.is-danger .message-body span{
+		font-size: 15px;
+	}
+	.slide-1 .message-header{
+		border-radius: 0;
+		padding: 0;
+	}
+	 .message-header{
+		border-radius: 0;
+	}
+	.message-header p span{
+		display: none
+	}
+	.slide-1 .message-header P{
+		text-align: left;
+		padding-left: 30px;
+		font-size: 30px;
+		
+	}
+	.message-body .is-dark{
+		border-radius:   0 20px 20px 0;
+	}
+	.slide-2 .message-body .is-dark{
+		border-radius: 20px;
+	}
+	.message-body .is-dark.splash, .button.is-danger.next{
+		border-radius:20px 0 0 20px;
+	}
+	.button.is-danger.continue.next, .button.is-danger.is-outlined{
+		border-radius:20px;
+	}
+	form {
+		display: flex;
+		justify-content: space-around;
+		flex-wrap: wrap;
+	}
+	form  .button.is-danger.is-outlined{
+		margin-right: 25px;
+	}
+	.arrow-left, .arrow-right{
+		display: none;
+	}
+
+	.message.is-danger.slide-3{
+		padding-bottom: 20px;
+	}
+	.slide-3 .message-body p{
+		line-height: 16px;
+	}
+	.message.is-danger.slide-3 .message-body p {
+		padding-bottom: 15px;
+	}
+
+	.slide-10 .input.short{
+		padding-left: 15px
+	}
+	.input.short{
+		width: 90px;
+	}
+	.mobile-navi{
+		display: block;
+	}
+
 	.bulb{
-		height: 10px;
-		width: 10px;
+		height: 12px;
+		width: 12px;
 		margin-right: 5px;
+	}
+	.bulb.current{
+		background-color: #ed217c;
 	}
 	.button.continue .fa.fa-angle-double-right{
 		padding-top: 10px;
@@ -371,17 +500,26 @@ body, .message-header, .button, .slide-10 .select select, .button, .input {
 		padding: 7px;
 	}
 	.button, .input{
-		margin: 7px 0;
+		margin: 3px 0;
+	}
+	.double-arrow{
+		padding: 10px 40px;
+		opacity: .7
+	}
+	.button.is-danger.next.double-arrow{
+		border-radius:0 20px 20px 0;
+	}
+	.message-body .is-dark.double-arrow{
+		border-radius:20px 0 0 20px;
+	}
+	.back.back-left, .back.back-right{
+		display: none;
+	}
+	.mobile-navi .bulb:first-child{
+		margin-left: 0
 	}
 }
-p.error {
- text-align: center !important;
- font-size: 0.65em;
- color: #FF204C;
- padding: 5px 0;
-}
 
 
-.slide-10 .input.short{
-	padding-left: 30px;
-}
+
+
