--- a/style.css
+++ b/style.css
@@ -562,6 +562,41 @@ p.error {
 	}
 }
 
+.link-block{
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	z-index: 110
+}
+.link-block .delim{
+	padding: 0 15px
+}
+
+.link-block a{
+	color: #ff3860
+}
+
+.wrapper-grey{
+	display: flex;
+	height: 100vh;
+	justify-content: center;
+	margin: auto;
+	background: #505050;
+	align-items: center;
+}
+
+.wrapper-grey .text{
+	width: 50%;
+	height: 50%;
+	background: #747474;
+	border: 1px solid #A8A7A7;
+	border-radius: 16px;
+	box-shadow: 2px 2px 8px 3px #222222;
+	text-align: center;
+	padding: 20px;
+	box-sizing:border-box; 
+	color: #1D1D1D
+}
 
 
 
