--- a/style.css
+++ b/style.css
@@ -576,18 +576,9 @@ p.error {
 	color: #ff3860
 }
 
-.wrapper-grey{
-	display: flex;
-	height: 100vh;
-	justify-content: center;
-	margin: auto;
-	background: #505050;
-	align-items: center;
-}
 
-.wrapper-grey .text{
-	width: 50%;
-	height: 50%;
+
+ .text{
 	background: #747474;
 	border: 1px solid #A8A7A7;
 	border-radius: 16px;
