--- a/style.css
+++ b/style.css
@@ -580,14 +580,14 @@ p.error {
 
  .text{
 	flex-wrap: wrap;
-	background: #747474;
+	background: rgba(116, 116, 116, 0.79);
 	border: 1px solid #A8A7A7;
 	border-radius: 16px;
 	box-shadow: 2px 2px 8px 3px #222222;
 	text-align: center;
 	padding: 20px;
 	box-sizing:border-box; 
-	color: #1D1D1D;
+	color: #DBDBDB;
 	max-height: 600px;
 	overflow-y: auto;
 }
